--- a/programming/index.html
+++ b/programming/index.html
@@ -1,16 +1,17 @@
 ---
 layout: default
 ---
-
+<p>
 There are several programming projects I'm playing with.
 This makes for a hodge-podge of links and I don't always take
 the time to make cleanly installable packages.
 Not good of me, I know.
-
+</p>
+<p>
 If you have questions, feel free to email me.
-
-## OpenSimulator (August 2014 to current)
-
+</p>
+<h1>OpenSimulator (August 2014 to current)</h1>
+<p>
 I've been a core developer for
 <a href="http://opensimulator.org">OpenSimulator</a>
 and have added
@@ -18,45 +19,49 @@ and have added
 which is a port of the
 <a href="http://bulletphysics.org">Bullet physics engine</a>
 to the OpenSimulator virtual world simulator.
-
+</p>
+<p>
 I've also added variable sized regions
 <a href="http://opensimulator.org/wiki/Varregion">VarRegions</a>
 which are non-legacy sized regions (not 256x256).
-
-## LookingGlass (July 2009)
-
+</p>
+<h1>LookingGlass (July 2009)</h1>
 <img style="float:left;margin:0px 10px 10px 0px" 
-            src="http://misterblue.com/images/LookingGlassLogo256.png" 
+            src="/images/LookingGlassLogo256.png" 
             alt="LookingGlass Viewer Logo" />
-
+<p>
 Getting involved in C# and the
 <a href="http://opensimulator.org">OpenSimulator</a>
 project, I set about writing a viewer. This got me
 into <a href="http://ogre3d.org">Ogre</a>,
 C# and many other pieces of code.
-
+</p>
+<p>
 The LookingGlass viewer now has it's own web site at
 <a href="http://lookingglassviewer.org">http://lookingglassviewer.org</a>
 and the sources are available in the
 <a href="http://forge.opensimulator.org/gf/project/lookingglass">
 OpenSimulator Project Forge</a>.
 That place also collects bugs, features and other project management.
-
+</p>
+<p>
 Dynamic loading of resources in Ogre is an artform.
 After wrestling with it for several weeks, 
 I wrote up my solution in
-<a href="http://misterblue.com/programming/dynamic-ogre-resources">
+<a href="/programming/dynamic-ogre-resources">
 Dynamic Loading of Ogre Resources</a>.
-
-## PlanetLab (March 2008)
-
+</p>
+<br clear="all"/>
+<h1>PlanetLab (March 2008)</h1>
+<p>
 <a href="http://www.planet-lab.org/">PlanetLab</a>
 is a global research platform for distributed service research.
 Once part of the network (universities and companies join
 by donating computers to the network), once can create
 virtual machines all over the world to develop and test
 new concepts in wildly distributed applications.
-
+</p>
+<p>
 I wrote two and run one service on PlanetLab:
 <ul>
     <li>
@@ -95,4 +100,5 @@ I wrote two and run one service on PlanetLab:
         with documentation and status.
     </li>
 </ul>
+</p>
 
