--- a/index.html
+++ b/index.html
@@ -4,17 +4,7 @@ layout: default
 
 {% for post in paginator.posts %}
   {% if post.categories contains 'blog' or post.categories contains 'misterblue' %}
-    <div class="article">
-        <div class="well">
-            <h1><a href="{{ site.baseurl}}{{ post.url }}">{{ post.date | date: "%b %-d, %Y" }} - {{ post.title }}</a></h1>
-            {% if site.commentable == true and post.comments == true and site.disqus != '' %}
-              <p class="author"><a href="{{ site.baseurl }}{{ post.url }}/#disqus_thread">Comments</a></p>
-            {% endif %}
-            <div class="content">
-                {{ post.content }}
-            </div>
-        </div>
-    </div>
+    {% include one-post.html thepost=post %}
   {% endif %}
 {% endfor %}
 
