Change status tests from 'published' to 'publish'. Add comments to recent post frontmatter to give hints on what must be set.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 {% for post in paginator.posts %}
-  {% if post.status == "published" %}
+  {% if post.status == "publish" %}
     {% if post.categories contains 'blog' or post.categories contains 'misterblue' %}
       {% include one-post.html thepost=post %}
     {% endif %}
