Fix problems with books -- broken image links and page titles. Remove temp files unadvertantly checked in.

--- a/Books/Book-2004.html
+++ b/Books/Book-2004.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-title: About
+title: Misterblue Books 2004
 yearRead: 2004
 ---
 <h2>MisterBlue's Book: {{ page.yearRead }}</h2>
@@ -21,7 +21,7 @@ yearRead: 2004
 <a name="The Greek Adventure">
 </a>
 <a href="http://www.amazon.com/exec/obidos/ASIN/068910653X/misterblue">
-<img src="./images/Misterblue's Book_files/AmazonSmall.gif" border="0" width="100" height="21">
+<img src="./images/AmazonSmall.gif" border="0" width="100" height="21">
 </a>
 </td>
 <td width="80%">
@@ -64,7 +64,7 @@ yearRead: 2004
 </a>
 <a href="http://www.amazon.com/exec/obidos/ASIN/0684818981/misterblue">
 <img src="./images/Book_ToHaveAndToHaveNot.jpg" border="0" width="100">
-<img src="./images/Misterblue's Book_files/AmazonSmall.gif" border="0" width="100" height="21">
+<img src="./images/AmazonSmall.gif" border="0" width="100" height="21">
 </a>
 </td>
 <td width="80%">
@@ -105,7 +105,7 @@ yearRead: 2004
 </a>
 <a href="http://www.amazon.com/exec/obidos/ASIN/0060964049/misterblue">
 <img src="./images/Book_TalesOfTheCity.jpg" border="0" width="100">
-<img src="./images/Misterblue's Book_files/AmazonSmall.gif" border="0" width="100" height="21">
+<img src="./images/AmazonSmall.gif" border="0" width="100" height="21">
 </a>
 </td>
 <td width="80%">
@@ -146,8 +146,8 @@ yearRead: 2004
 <a name="The Cat Who Turned On and Off">
 </a>
 <a href="http://www.amazon.com/exec/obidos/ASIN/0515087947/misterblue">
-<img src="./images/Misterblue's Book_files/Book_TheCatWhoTurnedOnAndOff.gif" border="0" width="100">
-<img src="./images/Misterblue's Book_files/AmazonSmall.gif" border="0" width="100" height="21">
+<img src="./images/Book_TheCatWhoTurnedOnAndOff.gif" border="0" width="100">
+<img src="./images/AmazonSmall.gif" border="0" width="100" height="21">
 </a>
 </td>
 <td width="80%">
@@ -190,7 +190,7 @@ yearRead: 2004
 </a>
 <a href="http://www.amazon.com/exec/obidos/ASIN/0061020397/misterblue">
 <img src="./images/Book_CarpeJugulum.jpg" border="0" width="100">
-<img src="./images/Misterblue's Book_files/AmazonSmall.gif" border="0" width="100" height="21">
+<img src="./images/AmazonSmall.gif" border="0" width="100" height="21">
 </a>
 </td>
 <td width="80%">
@@ -227,7 +227,7 @@ yearRead: 2004
 </a>
 <a href="http://www.amazon.com/exec/obidos/ASIN/0061020400/misterblue">
 <img src="./images/Book_TheFifthElephant.jpg" border="0" width="100">
-<img src="./images/Misterblue's Book_files/AmazonSmall.gif" border="0" width="100" height="21">
+<img src="./images/AmazonSmall.gif" border="0" width="100" height="21">
 </a>
 </td>
 <td width="80%">
@@ -263,7 +263,7 @@ yearRead: 2004
 </a>
 <a href="http://www.amazon.com/exec/obidos/ASIN/0374253854/misterblue">
 <img src="./images/Book_SamuraiWilliam.jpg" border="0" width="100">
-<img src="./images/Misterblue's Book_files/AmazonSmall.gif" border="0" width="100" height="21">
+<img src="./images/AmazonSmall.gif" border="0" width="100" height="21">
 </a>
 </td>
 <td width="80%">
@@ -314,7 +314,7 @@ yearRead: 2004
 </a>
 <a href="http://www.amazon.com/exec/obidos/ASIN/0345431618/misterblue">
 <img src="./images/Book_TheManWhoFellToEarth.jpg" border="0" width="100">
-<img src="./images/Misterblue's Book_files/AmazonSmall.gif" border="0" width="100" height="21">
+<img src="./images/AmazonSmall.gif" border="0" width="100" height="21">
 </a>
 </td>
 <td width="80%">
@@ -361,8 +361,8 @@ yearRead: 2004
 <a name="The Cat Who Came to Breakfast">
 </a>
 <a href="http://www.amazon.com/exec/obidos/ASIN/0515115649/misterblue">
-<img src="./images/Misterblue's Book_files/Book_TheCatWhoCameToBreakfast.gif" border="0" width="100">
-<img src="./images/Misterblue's Book_files/AmazonSmall.gif" border="0" width="100" height="21">
+<img src="./images/Book_TheCatWhoCameToBreakfast.gif" border="0" width="100">
+<img src="./images/AmazonSmall.gif" border="0" width="100" height="21">
 </a>
 </td>
 <td width="80%">
@@ -417,8 +417,8 @@ yearRead: 2004
 <a name="Empire of Bones: A Novel of Sam Houston and the Texas Revolution">
 </a>
 <a href="http://www.amazon.com/exec/obidos/ASIN/0688122523/misterblue">
-<img src="./images/Misterblue's Book_files/saved_resource" border="0" width="100">
-<img src="./images/Misterblue's Book_files/AmazonSmall.gif" border="0" width="100" height="21">
+<img src="./images/Book_EmpireOfBones.jpg" border="0" width="100">
+<img src="./images/AmazonSmall.gif" border="0" width="100" height="21">
 </a>
 </td>
 <td width="80%">
@@ -432,7 +432,7 @@ yearRead: 2004
 <div>
               by
               
-<a href="http://www.amazon.com/exec/obidos/search-handle-url/index=books&field-author=Long,%20Feff/">Jeff Long
+<a href="http://www.amazon.com/exec/obidos/search-handle-url/index=books&field-author=Long,%20Jeff/">Jeff Long
 </a> 
 </div>
 <p>
@@ -466,7 +466,7 @@ yearRead: 2004
 </a>
 <a href="http://www.amazon.com/exec/obidos/ASIN/0842329129/misterblue">
 <img src="./images/Book_LeftBehind.jpg" border="0" width="100">
-<img src="./images/Misterblue's Book_files/AmazonSmall.gif" border="0" width="100" height="21">
+<img src="./images/AmazonSmall.gif" border="0" width="100" height="21">
 </a>
 </td>
 <td width="80%">
@@ -515,7 +515,7 @@ yearRead: 2004
 </a>
 <a href="http://www.amazon.com/exec/obidos/ASIN/0399149864/misterblue">
 <img src="./images/Book_PatternRecognition.jpg" border="0" width="100">
-<img src="./images/Misterblue's Book_files/AmazonSmall.gif" border="0" width="100" height="21">
+<img src="./images/AmazonSmall.gif" border="0" width="100" height="21">
 </a>
 </td>
 <td width="80%">
@@ -573,7 +573,7 @@ yearRead: 2004
 </a>
 <a href="http://www.amazon.com/exec/obidos/ASIN/0061020710/misterblue">
 <img src="./images/Book_ColorOfMagic.jpg" border="0" width="100">
-<img src="./images/Misterblue's Book_files/AmazonSmall.gif" border="0" width="100" height="21">
+<img src="./images/AmazonSmall.gif" border="0" width="100" height="21">
 </a>
 </td>
 <td width="80%">
@@ -620,8 +620,8 @@ yearRead: 2004
 <a name="Inside the Mouse">
 </a>
 <a href="http://www.amazon.com/exec/obidos/ASIN/0822316242/misterblue">
-<img src="./images/Misterblue's Book_files/Book_InsideTheMouse.gif" border="0" width="100">
-<img src="./images/Misterblue's Book_files/AmazonSmall.gif" border="0" width="100" height="21">
+<img src="./images/Book_InsideTheMouse.gif" border="0" width="100">
+<img src="./images/AmazonSmall.gif" border="0" width="100" height="21">
 </a>
 </td>
 <td width="80%">
