Change name of book review comment field to "review" from "comment"     since Liquid over=senses comments. Add comment to _data/books.yml saying where book image should be placed.

--- a/Books/index.html
+++ b/Books/index.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: Misterblue Books Read
-yearRead: 2005
+yearRead: 2015
 ---
 <h2>MisterBlue's Books I've Read</h2>
 
@@ -101,7 +101,7 @@ if the mood hits you, purchase the book.</p>
                             <a href="{{ book.authorUrl }}"> {{ book.author }} </a> 
                         </div>
                         <p class="mb-bookComment">
-                            {{ book.comment }}
+                            {{ book.review }}
                         </p>
                     </td>
                 </tr>
