Hacking to move since article rendering into one include file. Comments only appear on the single article page although things are now setup to allow them to be on the main page.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ layout: default
 
 {% for post in paginator.posts %}
   {% if post.status == "publish" %}
-    {% include one-post.html thepost=post %}
+    {% include one-post.html thepost=post thecontent=post.content ownpage="no" %}
   {% endif %}
 {% endfor %}
 
