Move inclusion of Disqus scripts out of the footer and into the index and post files. Update _config.yml for production location.

--- a/index.html
+++ b/index.html
@@ -21,3 +21,7 @@ layout: default
     <a class="btn btn-default" href="{{ site.baseurl}}/page{{ paginator.next_page }}" class="next">Older</a>
   {% endif %}
 </div>
+
+{% if site.disqus != '' %}
+    {% include disqus-counts.html %}
+{% endif %}
