Add optional comments to layouts of type 'page'. Update programming index to include Basil work. Add note on Javascript and Flatbuffers. The format may still be wrong.

--- a/programming/index.html
+++ b/programming/index.html
@@ -10,6 +10,41 @@ Not good of me, I know.
 <p>
 If you have questions, feel free to email me.
 </p>
+<h1>Yet Another Virtual World Viewer</h1>
+<p>
+My current attempt at a 3D virtual world viewer is
+<a href="http://blog.misterblue.com/basil/">Basil</a> which is an architecture around creating
+a viewer where a
+<a href="https://highfidelity.io/">High Fidelity</a>
+avatar can stand next to an
+<a href="http://opensimulator.org">OpenSimulator</a>
+avatar.
+</p>
+<p>
+I tried with the Looking Glass viewer (see
+<a href="http://lookingglassviewer.org">http://lookingglassviewer.org</a>
+)
+but I never gave up on the idea of a viewer for
+virtual worlds.
+The documentation for Basil is scattered around with some
+on my 
+<a href="http://blog.misterblue.com/basil/">blog</a>,
+some with the projects on Github,
+and some covering the larger
+<a href="http://blog.misterblue.com/virtualworlds/herbal3d/">Herbal3D</a>
+project of which Basil is just a part.
+</p>
+<p>
+At the moment (April 2017), the focus is on a WebGL based viewer
+and building the infrastructure to view
+<a href="http://opensimulator.org/">OpenSimulator</a> virtual
+worlds with close work with the
+<a href="https://github.com/InWorldz/halcyon">Halcyon</a> simulator.
+Eventually, there will be an
+<a herf="https://www.unrealengine.com/">Unreal Engine</a>
+version of the viewer and adaptors for other virtual worlds.
+</p>
+<p>
 <h1>OpenSimulator (August 2014 to current)</h1>
 <p>
 I've been a core developer for
