Update 'About' page.

--- a/About.html
+++ b/About.html
@@ -8,17 +8,34 @@ title: About
 Not "blue" like the mood, but blue like the sky or blue like the bird or blue like the ocean.
 </p>
 <p>
-You have found the home page of Robert Adams. I have been "on the Internet" for nearly 20 years from the days of 110 baud modems and accessing "TIP"s to connect to MIT to play Zork. I ran USENET news servers when a 300 baud modem was all the connection you needed and you could read everything that was posted on one day in less than an hour. I was never a bigwig and I can't claim to have invented the net or anything, but I was there.
+You have found the home page of Robert Adams.
+I have been "on the Internet" for nearly 40 years from the days of 110 baud modems and
+accessing "TIP"s to connect to MIT to play Zork.
+I ran USENET news servers when a 300 baud modem was all the connection you needed and
+you could read everything that was posted on one day in less than an hour.
+I attended the Homebrew Computing Club meetings at Stanford where Steve and Woz
+were showing off their latest mother boards on folding tables in the lobby.
+I was never a bigwig and I can't claim to have been an internet mover or shaker,
+but I was there when the Internet and personal computers happened.
 </p>
 <p>
-It's grown a bit since those days.
+The Internet has grown a bit since those days.
 </p>
 <p>
-And this is my little area of it. Friends, family and people interested in what I'm interested in will stop by and we can chat and exchange ideas.
+And this is my little area of it. Friends, family and people interested in what I'm
+interested in will stop by and we can chat and exchange ideas.
 </p>
 <p>
-My pages list some of the things I've done and seen and thought. It's a bit presumptuous to think that my thoughts would be interesting to anyone but me, but I figured there were two choices: I could write it down and put it in a drawer and it would only be good for me or I could write it down and put it on the web and someday, somehow someone else might get something from it. The latter case is more appealing.
+My pages list some of the things I've done and seen and thought.
+It's a bit presumptuous to think that my thoughts would be interesting to anyone but me,
+but I figured there were two choices:
+I could write it down and put it in a drawer and it would only be good for me
+or I could write it down and put it on the web and someday,
+somehow someone else might get something from it. The latter case is more appealing.
 </p>
 <p>
-So, for each area, I've recorded for myself notes on the books I've read and the movies I've seen and I've written notes and papers on topics of interest. For me, this serves as a reminder and a place to go back to when I ask "I read an article on X. Ahhhh, were was that?".
+So, for each area, I've recorded for myself notes on the books I've read and the
+movies I've seen and I've written notes and papers on topics of interest.
+For me, this serves as a reminder and a place to go back to when I ask
+"I read an article on X. Ahhhh, were was that?".
 </p>
