Update the notes on programming projects.

--- a/programming/index.html
+++ b/programming/index.html
@@ -10,7 +10,28 @@ Not good of me, I know.
 <p>
 If you have questions, feel free to email me.
 </p>
+<h1>Toning Up Our Robot Overlords</h1>
+<p>
+Starting some projects with a pile of
+Raspberry Pi's
+and
+ROS
+.
+Attempting to 3D print skeleton parts to create articulated
+creatures.
+Have to figure out stepping motors first.
+More to come on that.
+</p>
 <h1>Yet Another Virtual World Viewer</h1>
+<p>
+I've spent some time playing with the idea of a single infrastructure
+for augmented reality and virtual worlds.
+There is an
+<a href="http://blog.misterblue.com/virtualworlds/herbal3d/">architectural overview</a>
+for 
+<a href="http://blog.misterblue.com/virtualworlds/herbal3d/">Herbal3D</a>
+.
+</p>
 <p>
 My current attempt at a 3D virtual world viewer is
 <a href="http://blog.misterblue.com/basil/">Basil</a> which is an architecture around creating
