--- a/programming/index.html
+++ b/programming/index.html
@@ -10,18 +10,6 @@ Not good of me, I know.
 <p>
 If you have questions, feel free to email me.
 </p>
-<h1>Toning Up Our Robot Overlords</h1>
-<p>
-Starting some projects with a pile of
-Raspberry Pi's
-and
-ROS
-.
-Attempting to 3D print skeleton parts to create articulated
-creatures.
-Have to figure out stepping motors first.
-More to come on that.
-</p>
 <h1>Yet Another Virtual World Viewer</h1>
 <p>
 I've spent some time playing with the idea of a single infrastructure
@@ -36,7 +24,7 @@ for
 My current attempt at a 3D virtual world viewer is
 <a href="http://blog.misterblue.com/basil/">Basil</a> which is an architecture around creating
 a viewer where a
-<a href="https://highfidelity.io/">High Fidelity</a>
+<a href="https://vircadia.com/">Vircadia</a>
 avatar can stand next to an
 <a href="http://opensimulator.org">OpenSimulator</a>
 avatar.
@@ -56,11 +44,9 @@ and some covering the larger
 project of which Basil is just a part.
 </p>
 <p>
-At the moment (April 2017), the focus is on a WebGL based viewer
+At the moment (February 2022), the focus is on a WebGL based viewer
 and building the infrastructure to view
-<a href="http://opensimulator.org/">OpenSimulator</a> virtual
-worlds with close work with the
-<a href="https://github.com/InWorldz/halcyon">Halcyon</a> simulator.
+<a href="http://opensimulator.org/">OpenSimulator</a> virtual worlds.
 Eventually, there will be an
 <a herf="https://www.unrealengine.com/">Unreal Engine</a>
 version of the viewer and adaptors for other virtual worlds.
@@ -81,6 +67,20 @@ I've also added variable sized regions
 <a href="http://opensimulator.org/wiki/Varregion">VarRegions</a>
 which are non-legacy sized regions (not 256x256).
 </p>
+
+<h1>Toning Up Our Robot Overlords</h1>
+<p>
+Starting some projects with a pile of
+Raspberry Pi's
+and
+ROS
+.
+Attempting to 3D print skeleton parts to create articulated
+creatures.
+Have to figure out stepping motors first.
+More to come on that.
+</p>
+
 <h1>LookingGlass (July 2009)</h1>
 <img style="float:left;margin:0px 10px 10px 0px" 
             src="/images/LookingGlassLogo256.png" 
