Add years to 'programming' page.

--- a/programming/index.html
+++ b/programming/index.html
@@ -11,7 +11,7 @@ Not good of me, I know.
 If you have questions, feel free to email me.
 </p>
 
-<h1>Helping with Crystal-Frost Viewer</h1>
+<h1>Helping with Crystal-Frost Viewer (2023 to current)</h1>
 <p>
 There are several OpenSimulator/Second Life viewer development efforts.
 In 2023, I added configuration code and a bunch of refactoring help to the
@@ -40,7 +40,7 @@ and
 .
 </p>
 
-<h1>Another Take on Basil Virtual World Viewer</h1>
+<h1>Another Take on Basil Virtual World Viewer (2022)</h1>
 <p>
 Not content at letting
 Basil
@@ -55,7 +55,7 @@ This phase ended with a
 at the
 <a href="https://conference.opensimulator.org/">2022 OpenSimulator Community Conference</a>
 </p>
-<h1>Metaverse Server for HiFi Dispora</h1>
+<h1>Metaverse Server for HiFi Dispora (2021/2022)</h1>
 <p>
 I wrote a new grid server for the High Fidelity open sourced virtual worlds.
 </p>
