Add WebRtc project to programming. Trim list of sidebar sites.

--- a/programming/index.html
+++ b/programming/index.html
@@ -12,7 +12,19 @@ If you have questions, feel free to email me.
 </p>
 
 <div class="well">
-    <h1>Helping with Crystal-Frost Viewer (2023 to current)</h1>
+    <h1>WebRTC Voice for OpenSimulator (2024)</h1>
+    <p>
+        SecondLife is changing its voice service from Vivox to their
+        WebRTC implementation. I've taken on a project of adding the new
+        voice service to
+        <a href="http://opensimulator.org">OpenSimulator</a>.
+        This has turned into
+        <a href="https://github.com/Misterblue/os-webrtc-janus">os-webrtc-janus</a>
+        which is an <code>addin-module</code> for the OpenSimulator sources.
+    </p>
+</div>
+<div class="well">
+    <h1>Helping with Crystal-Frost Viewer (2023)</h1>
     <p>
         There are several OpenSimulator/Second Life viewer development efforts.
         In 2023, I added configuration code and a bunch of refactoring help to the
